--- a/org.eclipse.m2e.wtp.jpa.e42.feature/.project
+++ b/org.eclipse.m2e.wtp.jpa.e42.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.m2e.wtp.jpa.feature</name>
+	<name>org.eclipse.m2e.wtp.jpa.e42.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
