--- a/org.eclipse.m2e.wtp.jpa.e42/build.properties
+++ b/org.eclipse.m2e.wtp.jpa.e42/build.properties
@@ -2,10 +2,8 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
                plugin.properties,\
                about.html,\
                about.ini,\
                about.mappings,\
-               about.properties,\
-               lifecycle-mapping-metadata.xml
+               about.properties
